--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.7.1",
+    "tailwindcss": "^4.1.12",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
